# File: aethernova-chain-core/launchpad/Cargo.toml

[package]
name = "aethernova-launchpad"
# Версия и др. метаданные можно наследовать из workspace.package (если настроено в корне):
version.workspace     = true
edition.workspace     = true     # или задайте локально: edition = "2021"
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true
description = "Aethernova Launchpad CLI and orchestrator"
readme = "README.md"
rust-version.workspace = true

# Явно фиксируем resolver v2 (рекомендуется для workspace; см. docs)
resolver = "2"

# По умолчанию собираем бинарь `launchpad`
default-run = "launchpad"

[lib]
# Если библиотека не нужна, можно закомментировать
name = "launchpad"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "launchpad"
path = "src/main.rs"

[features]
# Минимальный набор включённых фич
default = ["cli", "runtime-tokio", "telemetry"]
cli = ["dep:clap", "dep:serde_json"]
runtime-tokio = ["dep:tokio"]
telemetry = ["dep:tracing", "dep:tracing-subscriber"]

# Опциональные интеграции
http = ["dep:reqwest", "dep:hyper", "tokio?/rt-multi-thread"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]

# Пример флага для лёгкой сборки
light = []

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }

# CLI
clap = { version = "4", features = ["derive"], optional = true }

# Runtime / async
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }

# HTTP (опционально)
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "http2", "rustls-tls"], optional = true }
hyper = { version = "1", features = ["http2", "client"], optional = true }

# Observability
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Конфигурации/парсер TOML при необходимости
toml = "0.8"
config = { version = "0.14", default-features = false, features = ["toml"] }

# Метрики (опционально)
metrics = { version = "0.22", optional = true }
metrics-exporter-prometheus = { version = "0.15", optional = true }

# Криптография/хеши (пример)
sha2 = "0.10"
blake3 = "1"

# Серилизация UUID/время и т.п.
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["macros", "serde-human-readable"] }

[dev-dependencies]
# Тестовые утилиты
assert_cmd = "2"
predicates = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
# При необходимости генерировать код/версии на этапе сборки
vergen = { version = "9", default-features = false, features = ["build", "git", "rustc"] }

[profile.dev]
# Быстрые инкрементальные сборки, но с приличной оптимизацией для бенчей
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
incremental = true

[profile.release]
# Производственная сборка
opt-level = "z"         # или "s" для баланса размера/скорости
lto = "thin"            # тонкое LTO (рекомендовано для большинства проектов)
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true

[profile.test]
inherits = "dev"
opt-level = 0

[workspace]
# Если файл используется как независимый пакет вне общего workspace — блок можно удалить.
members = []

[workspace.package]
# Этот блок актуален, если пакет является членом корневого workspace, где хотите централизовать метаданные
version = "0.1.0"
edition = "2021"        # 2021 включает новый resolver по умолчанию, но для workspace явное resolver="2" — хорошая практика
authors = ["Aethernova Authors <dev@aethernova.example>"]
license = "Apache-2.0"
repository = "https://example.com/aethernova/chain-core"
homepage = "https://example.com/aethernova"
rust-version = "1.75"

[package.metadata.launchpad]
# Пользовательские метаданные для тулов релиза/оркестрации
artifact = "aethernova-launchpad"
